cabal-version: 3.0

name:           DecisionTheory
version:        0.1.0.0
synopsis:       Decision Theory implementations in Haskell
category:       Math
homepage:       https://github.com/DecisionTheory/DecisionTheory#readme
bug-reports:    https://github.com/DecisionTheory/DecisionTheory/issues
author:         Daniel Yokomizo & Gustavo Bicalho
maintainer:     daniel.yokomizo@gmail.com
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/DecisionTheory/DecisionTheory

library
  exposed-modules:
      DecisionTheory.Base
      DecisionTheory.Debug
      DecisionTheory.DecisionTheory
      DecisionTheory.Graph
      DecisionTheory.Probability
      DecisionTheory.TypedDecisionTheory
      DecisionTheory.TypedGraph
      DecisionTheory.V2.HList
      DecisionTheory.V2.TypedGraph
      DecisionTheory.V2.TypeSet
      DecisionTheory.V2.Stringify
      DecisionTheory.V2.TypedDecisionTheory
  other-modules:
      Paths_DecisionTheory
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5, HList
  default-language: Haskell2010

test-suite DecisionTheory-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      DeathInDamascus
      V2.DeathInDamascus
      DecisionTheoryTests
      Newcomb
      V2.Newcomb
      ParfitsHitchhiker
      V2.ParfitsHitchhiker
      XorBlackmail
      V2.XorBlackmail
      Paths_DecisionTheory
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      DecisionTheory
    , QuickCheck
    , base >=4.7 && <5
    , hspec
  default-language: Haskell2010
